# PHEMAP

./: CMakeLists.txt
inc/authservice/: as.h  as_config.h  phemap_as_babel_chain.h  phemap_as_enroll.h  phemap_as_enrollment.h  phemap_as_init.h  phemap_as_verification.h  phemap_chain.h
inc/common/: config.h  memxor.h  phemap_carnet.h  phemap_message.h  typedefs.h
inc/common/linux/: linux_queue.h  linux_thread.h  linux_timer.h
inc/communication/: channel.h  transport.h
inc/device/: d_config.h  device.h  fuzzy.h  phemap_dev_babel_chain.h  phemap_dev_enroll.h  phemap_dev_init.h  phemap_dev_phi.h  phemap_dev_verification.h  rc5.h  rm17.h  sha256.h
src/: CMakeLists.txt  communication_test.c  enroll.c  peer.c  phemap_bc_comm_test.c  phemap_comm_test.c  phemap_init_test.c
src/authservice/: CMakeLists.txt  as.c  phemap_as_babel_chain.c  phemap_as_enroll.c  phemap_as_enrollment.c  phemap_as_init.c  phemap_as_verification.c  phemap_chain.c
src/common/: CMakeLists.txt  memxor.c
src/common/linux/: CMakeLists.txt  linux_queue.c  linux_thread.c  linux_timer.c
src/communication/: CMakeLists.txt  channel.c  transport.c
src/device/: CMakeLists.txt  device.c  phemap_dev_babel_chain.c  phemap_dev_enroll.c  phemap_dev_init.c  phemap_dev_phi.c  phemap_dev_verification.c  rc5.c  rm17.c  sha256.c
